--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token":"1668676797:AAGvFupWyiipg-32KELVySbO0nw5YxNtJyc",
-    "bot-owner-id":921878629
+    "token":"your token",
+    "bot-owner-id":"your id"
 }
