--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token":"7918509748:AAH97wqCMBE1gk20cGQI8A3XqyvS44rQfPI",
-    "bot-owner-id":"7292375878"
+    "token":"Your Bot Token",
+    "bot-owner-id":"Telegram ID"
 }
